# smartkoshnitsa

./: .env.example  .gitignore  CLAUDE.MD  PROJECT_STATUS.MD  pyproject.toml  render.yaml  run.py
.claude/: settings.json  settings.local.json
.claude/commands/: checkpoint.md  fix-scrapper.md  scrape-test.md  scraper.md  status.md  tests.md
api/: main.py
data/: smartkoshnitsa.db
db/: models.py
frontend/: index.html
parser/: lidl_pdf.py  normalizer.py  pdf_parser.py
scrapers/: billa.py  kaufland.py  lidl.py
smartkoshnitsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_normalizer.py
