[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartkoshnitsa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "playwright>=1.43.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.24.0",
    "rapidfuzz>=3.8.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["db*", "api*", "parser*", "scrapers*"]
exclude = ["data*", "frontend*", "tests*"]